--- a/Lugovkin-K-PP_3_1_2_Boot_Security/src/main/resources/templates/new.html
+++ b/Lugovkin-K-PP_3_1_2_Boot_Security/src/main/resources/templates/new.html
@@ -6,24 +6,24 @@
 </head>
 <body>
 <h1>Создать нового пользователя</h1>
-<form method="post" th:action="@{/admin/create}" th:object="${user}">
+<form th:method="post" th:action="@{/admin/create}" th:object="${user}">
 
     <label for="username">Имя пользователя:</label>
-    <input type="text" id="username" name="username" required>
+    <input type="text" id="username" th:field="*{username}" required>
 
     <label for="password">Пароль:</label>
-    <input type="password" id="password" name="password" required>
+    <input type="password" id="password" th:field="*{password}" required>
 
     <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
+    <input type="email" id="email" th:field="*{email}" required>
 
-    <div>
-        <label><input type="checkbox" name="roles" value="ROLE_USER"> Пользователь</label>
-    </div>
-    <div>
-        <label><input type="checkbox" name="roles" value="ROLE_ADMIN"> Администратор</label>
-    </div>
-
+    <label for="roles">Выберите роли:</label>
+    <select id="roles" name="rolesIds" multiple="multiple">
+        <option th:each="role : ${allRoles}"
+                th:value="${role.id}"
+                th:text="${role.name}">Роль
+        </option>
+    </select>
 
     <button type="submit">Создать</button>
 </form>
